# ID2203-project

./: Cargo.toml  README.md
example/: message_work_bad.rs
src/: main.rs
tests/: command_line.bat
