[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
omnipaxos_core = { git = "https://github.com/Flaxen/omnipaxos" }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"